# dino-gun

./: .gitignore  CMakeLists.txt  animation.cpp  animation.h  app  cacti.cpp  cacti.h  constantsLoader.cpp  constantsLoader.h  dinosaur.cpp  dinosaur.h  game_manager.cpp  game_manager.h  ground.cpp  ground.h  main.cpp  makefile  t_rex.cpp  t_rex.h  test.cpp  test.h
src/: Game Mechanics  README.md  animation.cpp  animation.h  cacti.cpp  cacti.h  dinosaur.cpp  dinosaur.h  enemies_manager.cpp  enemies_manager.h  game_manager.cpp  game_manager.h  ground.cpp  ground.h  main.cpp  makefile  t_rex.cpp  t_rex.h  utils.cpp  utils.h  variables_loader.cpp  variables_loader.h
